# glibdictclient

./: CMakeLists.txt  README  config.h.in
src/: CMakeLists.txt  glibdictclient.h  main.c
src/doc/html/: doxygen_crawl.html  files.html  glibdictclient_8h.html  glibdictclient_8h_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js
src/doc/html/search/: all_1.js  all_2.js  enums_0.js  enumvalues_0.js  functions_0.js  searchdata.js  typedefs_0.js
src/lib/: CMakeLists.txt  glibdictclient.c  glibdictclient.doxy
